# nox_cpu

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  opcodes.md
examples/: CMakeLists.txt  fibonacci.nox  print_string.nox  return_exit_code.nox  return_ok_err.nox
examples/fibonacci/: fibonacci.nox
examples/print_string/: print_string.nox
src/: constants.h  main.c  opcodes.h
src/components/: clock.c  clock.h  components.h  cpu.c  cpu.h  stack.c  stack.h
src/components/cpu_ops/: add.c  call.c  compare.c  decrement.c  flags.c  increment.c  jump.c  logic_ops.c  misc.c  peek.c  pop.c  push.c  return.c  shift.c  stack.c  sub.c  zero.c
